# wasm_markdown

./: README.md  package.json  webpack.config.js
.github/workflows/: cl.yml
app/: index.ts  style.scss
docs/: 1.index.js  278.index.js  github-markdown.css  index.html  index.js  index.wasm
public/: index.html  prism.css  prism.js
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
