[package]
name = "wasm"
version = "0.1.0"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]
edition = "2021"
license = "MIT"
description="wasm function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]