[package]
name = "wasm"
version = "0.1.0"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]
edition = "2021"
license = "MIT"
description="wasm function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"]}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }


[features]
default = ["wee_alloc"]


[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"